--- a/pages/article/article.module.scss
+++ b/pages/article/article.module.scss
@@ -30,3 +30,19 @@
     text-align: center;
     font-size: 2rem;
 }
+
+.actions {
+    margin-bottom: 8px;
+    display: flex;
+    margin-left: 0;
+    @media screen and (max-width: 400px) {
+        flex-direction: column;
+        justify-content: center;
+        gap: 5px;
+        
+        a {
+            width: 150px;
+            margin-left: 8px;
+        }
+    }
+}
