--- a/pages/article/article.module.scss
+++ b/pages/article/article.module.scss
@@ -24,6 +24,14 @@
         margin-top: 0;
         margin-bottom: 0;
     }
+
+    .authorLink {
+        color: inherit;
+        text-decoration: none;
+        &:hover {
+            text-decoration: underline;
+        }
+    }
 }
 
 .heading {
