--- a/src/components/Article/article.module.scss
+++ b/src/components/Article/article.module.scss
@@ -31,6 +31,13 @@
 
             .name {
                 font-weight: bold;
+                a {
+                    color: inherit;
+                    text-decoration: none;
+                    &:hover {
+                        text-decoration: underline;
+                    }
+                }
             }
 
             .date {
