--- a/src/components/Comments/comment.module.scss
+++ b/src/components/Comments/comment.module.scss
@@ -8,6 +8,13 @@
 
     h3 {
         margin-bottom: 0;
+        a {
+            color: inherit;
+            text-decoration: none;
+            &:hover {
+                text-decoration: underline;
+            }
+        }
     }
 
     p {
