--- a/src/components/Article/article.module.scss
+++ b/src/components/Article/article.module.scss
@@ -12,6 +12,7 @@
 
     h1 {
         font-size: 3rem;
+        margin-bottom: 15px;
 
         @media screen and (max-width: 580px) {
             font-size: 2rem;
@@ -46,4 +47,11 @@
             }
         }
     }
+}
+
+.actions {
+    display: flex;
+    gap: 8px;
+    flex-wrap: wrap;
+    margin-top: 0;
 }
